# cairo-verifier

./: .gitignore  Cargo.toml
examples/starknet/: Cargo.toml
examples/starknet/src/: main.rs
fact_registry/src/: lib.cairo
runner/: Cargo.toml
runner/src/: main.rs  vec252.rs
src/: lib.cairo  oods.cairo  stark.cairo
src/air/: layouts.cairo
src/deserialization/: stark.cairo  traces.cairo
src/fri/: tests.cairo
src/queries/: tests.cairo
src/stark/: stark_commit.cairo  stark_verify.cairo  tests.cairo
src/table_commitment/: tests.cairo
