[workspace]
resolver = "2"
members = ["benches", "examples/starknet", "runner"]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
cairo-felt = "0.9"
cairo-lang-casm = { git = "https://github.com/starkware-libs/cairo/", rev = "4471a55923663eb8150ea6cd636d5c1038b137d1" }
cairo-lang-runner = { git = "https://github.com/starkware-libs/cairo/", rev = "4471a55923663eb8150ea6cd636d5c1038b137d1" }
cairo-lang-sierra = { git = "https://github.com/starkware-libs/cairo/", rev = "4471a55923663eb8150ea6cd636d5c1038b137d1" }
cairo-lang-utils = { git = "https://github.com/starkware-libs/cairo/", rev = "4471a55923663eb8150ea6cd636d5c1038b137d1" }
cairo-proof-parser = { git = "https://github.com/cartridge-gg/cairo-proof-parser.git", rev = "cfc2b58dff01af2a311e7a86fa8830f54cd2d92c" }
cairo-vm = "0.9.2"
clap = { version = "4.5.2", features = ["derive"] }
itertools = "0.12.0"
num-bigint = "0.4.4"
runner = { path = "runner" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
starknet-ff = "0.3.7"
thiserror = "1.0"
