[workspace]
resolver = "2"
members = ["runner", "benches", "examples/starknet"]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
cairo-felt = "0.9"
cairo-lang-casm = { git = "https://github.com/starkware-libs/cairo/", rev = "4471a55923663eb8150ea6cd636d5c1038b137d1" }
cairo-lang-runner = { git = "https://github.com/starkware-libs/cairo/", rev = "4471a55923663eb8150ea6cd636d5c1038b137d1" }
cairo-lang-sierra = { git = "https://github.com/starkware-libs/cairo/", rev = "4471a55923663eb8150ea6cd636d5c1038b137d1" }
cairo-lang-utils = { git = "https://github.com/starkware-libs/cairo/", rev = "4471a55923663eb8150ea6cd636d5c1038b137d1" }
cairo-proof-parser = { git = "https://github.com/cartridge-gg/cairo-proof-parser", rev = "8c5789d9afc7632e7747f48368c2f68dc273da2f" }
cairo-vm = "0.9.2"
clap = { version = "4.5.2", features = ["derive"] }
itertools = "0.13.0"
num-bigint = "0.4.4"
runner = { path = "runner" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
starknet-ff = "0.3.7"
thiserror = "1.0"
